IfcEngine.cs


		/// <summary>
		///		SetNameOfClass                              (http://rdf.bg/gkdoc/CS64/SetNameOfClass.html)
		///
		///	Sets/updates the name of the class, if no error it returns 0.
		///	In case class does not exist it returns 1, when name cannot be updated 2.
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "SetNameOfClass")]
		public static extern Int64 SetNameOfClass(Int64 owlClass, string name);

		[DllImport(IFCEngineDLL, EntryPoint = "SetNameOfClass")]
		public static extern Int64 SetNameOfClass(Int64 owlClass, byte[] name);

		/// <summary>
		///		SetNameOfClassW                             (http://rdf.bg/gkdoc/CS64/SetNameOfClassW.html)
		///
		///	Sets/updates the name of the class, if no error it returns 0.
		///	In case class does not exist it returns 1, when name cannot be updated 2.
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "SetNameOfClassW")]
		public static extern Int64 SetNameOfClassW(Int64 owlClass, string name);

		[DllImport(IFCEngineDLL, EntryPoint = "SetNameOfClassW")]
		public static extern Int64 SetNameOfClassW(Int64 owlClass, byte[] name);

		/// <summary>
		///		SetNameOfClassEx                            (http://rdf.bg/gkdoc/CS64/SetNameOfClassEx.html)
		///
		///	Sets/updates the name of the class, if no error it returns 0.
		///	In case class does not exist it returns 1, when name cannot be updated 2.
		///
		///	This call has the same behavior as SetNameOfClass, however needs to be
		///	used in case classes are exchanged as a successive series of integers.
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "SetNameOfClassEx")]
		public static extern Int64 SetNameOfClassEx(Int64 model, Int64 owlClass, string name);

		[DllImport(IFCEngineDLL, EntryPoint = "SetNameOfClassEx")]
		public static extern Int64 SetNameOfClassEx(Int64 model, Int64 owlClass, byte[] name);

		/// <summary>
		///		SetNameOfClassWEx                           (http://rdf.bg/gkdoc/CS64/SetNameOfClassWEx.html)
		///
		///	Sets/updates the name of the class, if no error it returns 0.
		///	In case class does not exist it returns 1, when name cannot be updated 2.
		///
		///	This call has the same behavior as SetNameOfClassW, however needs to be
		///	used in case classes are exchanged as a successive series of integers.
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "SetNameOfClassWEx")]
		public static extern Int64 SetNameOfClassWEx(Int64 model, Int64 owlClass, string name);

		[DllImport(IFCEngineDLL, EntryPoint = "SetNameOfClassWEx")]
		public static extern Int64 SetNameOfClassWEx(Int64 model, Int64 owlClass, byte[] name);

		/// <summary>
		///		GetNameOfClass                              (http://rdf.bg/gkdoc/CS64/GetNameOfClass.html)
		///
		///	Returns the name of the class, if the class does not exist it returns nullptr.
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "GetNameOfClass")]
		public static extern void GetNameOfClass(Int64 owlClass, out IntPtr name);

		/// <summary>
		///		GetNameOfClassW                             (http://rdf.bg/gkdoc/CS64/GetNameOfClassW.html)
		///
		///	Returns the name of the class, if the class does not exist it returns nullptr.
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "GetNameOfClassW")]
		public static extern void GetNameOfClassW(Int64 owlClass, out IntPtr name);

		/// <summary>
		///		GetNameOfClassEx                            (http://rdf.bg/gkdoc/CS64/GetNameOfClassEx.html)
		///
		///	Returns the name of the class, if the class does not exist it returns nullptr.
		///
		///	This call has the same behavior as GetNameOfClass, however needs to be
		///	used in case properties are exchanged as a successive series of integers.
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "GetNameOfClassEx")]
		public static extern void GetNameOfClassEx(Int64 model, Int64 owlClass, out IntPtr name);

		/// <summary>
		///		GetNameOfClassWEx                           (http://rdf.bg/gkdoc/CS64/GetNameOfClassWEx.html)
		///
		///	Returns the name of the class, if the class does not exist it returns nullptr.
		///
		///	This call has the same behavior as GetNameOfClassW, however needs to be
		///	used in case classes are exchanged as a successive series of integers.
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "GetNameOfClassWEx")]
		public static extern void GetNameOfClassWEx(Int64 model, Int64 owlClass, out IntPtr name);

		/// <summary>
		///		SetClassPropertyCardinalityRestriction      (http://rdf.bg/gkdoc/CS64/SetClassPropertyCardinalityRestriction.html)
		///
		///	This function sets the minCard and maxCard of a certain property in the context of a class.
		///	The cardinality of a property in an instance has to be between minCard and maxCard (as well 
		///	as within the cardinality restrictions as given by the property in context of any of its
		///	(indirect) parent classes).
		///	If undefined minCard and/or maxCard will be of value -1, this means
		///	for minCard that it is 0 and for maxCard it means infinity.
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "SetClassPropertyCardinalityRestriction")]
		public static extern void SetClassPropertyCardinalityRestriction(Int64 owlClass, Int64 rdfProperty, Int64 minCard, Int64 maxCard);

		/// <summary>
		///		SetClassPropertyCardinalityRestrictionEx    (http://rdf.bg/gkdoc/CS64/SetClassPropertyCardinalityRestrictionEx.html)
		///
		///	This function sets the minCard and maxCard of a certain property in the context of a class.
		///	The cardinality of a property in an instance has to be between minCard and maxCard (as well 
		///	as within the cardinality restrictions as given by the property in context of any of its
		///	(indirect) parent classes).
		///	If undefined minCard and/or maxCard will be of value -1, this means
		///	for minCard that it is 0 and for maxCard it means infinity.
		///
		///	This call has the same behavior as SetClassPropertyCardinalityRestriction, however needs to be
		///	used in case classes or properties are exchanged as a successive series of integers.
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "SetClassPropertyCardinalityRestrictionEx")]
		public static extern void SetClassPropertyCardinalityRestrictionEx(Int64 model, Int64 owlClass, Int64 rdfProperty, Int64 minCard, Int64 maxCard);

		/// <summary>
		///		GetClassPropertyCardinalityRestriction      (http://rdf.bg/gkdoc/CS64/GetClassPropertyCardinalityRestriction.html)
		///
		///	This function returns the minCard and maxCard of a certain
		///	property in the context of a class. The cardinality of a property in 
		///	an instance has to be between minCard and maxCard (as well as within the cardinality restrictions
		///	as given by the property in context of any of its (indirect) parent classes).
		///	If undefined minCard and/or maxCard will be of value -1, this means
		///	for minCard that it is 0 and for maxCard it means infinity.
		///
		///	Note: this function does not return inherited restrictions. The example shows how to retrieve
		///	this knowledge, as it is derived knowledge the call that used to be available is removed.
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "GetClassPropertyCardinalityRestriction")]
		public static extern void GetClassPropertyCardinalityRestriction(Int64 owlClass, Int64 rdfProperty, out Int64 minCard, out Int64 maxCard);

		/// <summary>
		///		GetClassPropertyCardinalityRestrictionEx    (http://rdf.bg/gkdoc/CS64/GetClassPropertyCardinalityRestrictionEx.html)
		///
		///	This function returns the minCard and maxCard of a certain
		///	property in the context of a class. The cardinality of a property in 
		///	an instance has to be between minCard and maxCard (as well as within the cardinality restrictions
		///	as given by the property in context of any of its (indirect) parent classes).
		///	If undefined minCard and/or maxCard will be of value -1, this means
		///	for minCard that it is 0 and for maxCard it means infinity.
		///
		///	This call has the same behavior as GetClassPropertyCardinalityRestriction, however needs to be
		///	used in case classes or properties are exchanged as a successive series of integers.
		///
		///	Note: this function does not return inherited restrictions. The example shows how to retrieve
		///	this knowledge, as it is derived knowledge the call that used to be available is removed.
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "GetClassPropertyCardinalityRestrictionEx")]
		public static extern void GetClassPropertyCardinalityRestrictionEx(Int64 model, Int64 owlClass, Int64 rdfProperty, out Int64 minCard, out Int64 maxCard);

		/// <summary>
		///		GetGeometryClass                            (http://rdf.bg/gkdoc/CS64/GetGeometryClass.html)
		///
		///	Returns non-zero if the owlClass is a geometry type. This call will return the input class
		///	for all classes initially available. It will return as well non-for all classes created by the
		///	user or loaded / imported through a model that (indirectly) inherit one of the
		///	original classes available. in this case it returns the original available class
		///	it inherits the behavior from.
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "GetGeometryClass")]
		public static extern Int64 GetGeometryClass(Int64 owlClass);

		/// <summary>
		///		GetGeometryClassEx                          (http://rdf.bg/gkdoc/CS64/GetGeometryClassEx.html)
		///
		///	Returns non-zero if the owlClass is a geometry type. This call will return the input class
		///	for all classes initially available. It will return as well non-for all classes created by the
		///	user or loaded / imported through a model that (indirectly) inherit one of the
		///	original classes available. in this case it returns the original available class
		///	it inherits the behavior from.
		///
		///	This call has the same behavior as GetGeometryClass, however needs to be
		///	used in case classes are exchanged as a successive series of integers.
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "GetGeometryClassEx")]
		public static extern Int64 GetGeometryClassEx(Int64 model, Int64 owlClass);

		/// <summary>
		///		IsClass                                     (http://rdf.bg/gkdoc/CS64/IsClass.html)
		///
		///	Returns true if the argument owlClass is an actual active class in an active model. It returns false in all other cases,
		///	i.e. this could mean the model is already closed, the class is inactive or removed or the session is closed.
		///	It could also mean it represents a handle to another Thing, for example a property, instance or model.
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "IsClass")]
		public static extern byte IsClass(Int64 owlClass);

        //
        //  Design Tree Properties API Calls
        //

		/// <summary>
		///		CreateProperty                              (http://rdf.bg/gkdoc/CS64/CreateProperty.html)
		///
		///	Returns a handle to an on the fly created property.
		///	If the model input is zero or not a model handle 0 will be returned,
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "CreateProperty")]
		public static extern Int64 CreateProperty(Int64 model, Int64 rdfPropertyType, string name);

		[DllImport(IFCEngineDLL, EntryPoint = "CreateProperty")]
		public static extern Int64 CreateProperty(Int64 model, Int64 rdfPropertyType, byte[] name);
